# dhamaka

./: .gitignore  .mailmap  .mcp.json  BENCHMARKS.md  CHANGELOG.md  README.md  package.json  playwright.config.js
.github/workflows/: ci.yml  pages.yml  release.yml
bench/: bench-browser.spec.js  bench-tasks.js  bench-wasm.js  playwright.bench.config.js
crates/dhamaka-runtime/: Cargo.toml  README.md  build.sh
crates/dhamaka-runtime/src/: abi.rs  lib.rs  model.rs  rng.rs  sampler.rs  tensor.rs  transformer.rs
crates/locus-runtime/: Cargo.toml  README.md  build.sh
crates/locus-runtime/src/: abi.rs  lib.rs  model.rs
docs/: GOALS.md
e2e/: autofill.spec.js  formula.spec.js  paste.spec.js  spellcheck.spec.js
models/: manifest.json
scripts/: build-site.js  prepare-publish.mjs
